force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>申請</label>
    <nameField>
        <displayFormat>AP-{000000000}</displayFormat>
        <label>申請No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>