force-app/main/default/objects/Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>申請</relationshipLabel>
    <relationshipName>RequestAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>