force-app/main/default/objects/Application__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>