force-app/main/default/objects/Application__c/fields/AgencyAdress__c.field-meta.xml
<CustomField>
    <fullName>AgencyAdress__c</fullName>
    <label>相手先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>