force-app/main/default/objects/Application__c/fields/AgencyChargeName__c.field-meta.xml
<CustomField>
    <fullName>AgencyChargeName__c</fullName>
    <label>相手先担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>