force-app/main/default/objects/Application__c/fields/AgencyEmail__c.field-meta.xml
<CustomField>
    <fullName>AgencyEmail__c</fullName>
    <label>相手先メール</label>
    <type>Email</type>
</CustomField>