force-app/main/default/objects/Application__c/fields/AirConditionerDetails__c.field-meta.xml
<CustomField>
    <fullName>AirConditionerDetails__c</fullName>
    <label>エアコン内訳</label>
    <length>255</length>
    <type>Text</type>
</CustomField>