force-app/main/default/objects/Application__c/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <label>アラートメッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>