force-app/main/default/objects/Application__c/fields/ApplicantCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicantCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社員</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>申請 (社員)</relationshipLabel>
    <relationshipName>RequestContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>