force-app/main/default/objects/Application__c/fields/ApplicantCodeText__c.field-meta.xml
<CustomField>
    <fullName>ApplicantCodeText__c</fullName>
    <label>申請者社員コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>