force-app/main/default/objects/Application__c/fields/ApplicationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDateTime__c</fullName>
    <label>申請日時</label>
    <type>DateTime</type>
</CustomField>