force-app/main/default/objects/Application__c/fields/ApplicationNo__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNo__c</fullName>
    <label>申請NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>