force-app/main/default/objects/Application__c/fields/ApplicationReason__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReason__c</fullName>
    <label>申請理由</label>
    <type>TextArea</type>
</CustomField>