force-app/main/default/objects/Application__c/fields/ApplicationReasonOther2__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReasonOther2__c</fullName>
    <label>申請事由その他2</label>
    <type>TextArea</type>
</CustomField>