force-app/main/default/objects/Application__c/fields/ApplicationReasonOther__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReasonOther__c</fullName>
    <label>申請事由その他</label>
    <type>TextArea</type>
</CustomField>