force-app/main/default/objects/Application__c/fields/ApplicationReasonType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReasonType__c</fullName>
    <label>申請事由区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>会社都合</fullName>
            </value>
            <value>
                <fullName>自己都合</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>