force-app/main/default/objects/Application__c/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <label>申請ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>未承認</fullName>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>