force-app/main/default/objects/Application__c/fields/AuthorizerComment__c.field-meta.xml
<CustomField>
    <fullName>AuthorizerComment__c</fullName>
    <label>承認者から担当宛コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>