force-app/main/default/objects/Application__c/fields/CalculateMethod__c.field-meta.xml
<CustomField>
    <fullName>CalculateMethod__c</fullName>
    <label>精算方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>銀行振替</fullName>
            </value>
            <value>
                <fullName>現金書留</fullName>
            </value>
            <value>
                <fullName>郵便為替</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>