force-app/main/default/objects/Application__c/fields/CancelAcceptNum__c.field-meta.xml
<CustomField>
    <fullName>CancelAcceptNum__c</fullName>
    <label>解約手配別受付番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>