force-app/main/default/objects/Application__c/fields/CancelOnHold1__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHold1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>対象物件1保留対象</label>
    <type>Checkbox</type>
</CustomField>