force-app/main/default/objects/Application__c/fields/CancelOnHold3__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHold3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>対象物件3保留対象</label>
    <type>Checkbox</type>
</CustomField>