force-app/main/default/objects/Application__c/fields/CarModel1__c.field-meta.xml
<CustomField>
    <fullName>CarModel1__c</fullName>
    <label>車種1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>