force-app/main/default/objects/Application__c/fields/CarModel2__c.field-meta.xml
<CustomField>
    <fullName>CarModel2__c</fullName>
    <label>車種2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>