force-app/main/default/objects/Application__c/fields/ChangeApplication__c.field-meta.xml
<CustomField>
    <fullName>ChangeApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更・削除対象申請</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>変更・削除対象申請</relationshipLabel>
    <relationshipName>ChangeApplication</relationshipName>
    <type>Lookup</type>
</CustomField>