force-app/main/default/objects/Application__c/fields/ChangeCurrentResidentAffiliationName__c.field-meta.xml
<CustomField>
    <fullName>ChangeCurrentResidentAffiliationName__c</fullName>
    <label>入替現入居者所属名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>