force-app/main/default/objects/Application__c/fields/ChangeMoveRealEstateName__c.field-meta.xml
<CustomField>
    <fullName>ChangeMoveRealEstateName__c</fullName>
    <label>入替入居物件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>