force-app/main/default/objects/Application__c/fields/ChangeRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ChangeRealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>申請 (入替物件)</relationshipLabel>
    <relationshipName>ChangeRealEstate</relationshipName>
    <type>Lookup</type>
</CustomField>