force-app/main/default/objects/Application__c/fields/ChangeRealEstateRoom__c.field-meta.xml
<CustomField>
    <fullName>ChangeRealEstateRoom__c</fullName>
    <label>入替物件号室</label>
    <length>255</length>
    <type>Text</type>
</CustomField>