force-app/main/default/objects/Application__c/fields/ChargeMemo__c.field-meta.xml
<CustomField>
    <fullName>ChargeMemo__c</fullName>
    <label>担当者メモ_備考</label>
    <type>TextArea</type>
</CustomField>