force-app/main/default/objects/Application__c/fields/CommuteMethod2__c.field-meta.xml
<CustomField>
    <fullName>CommuteMethod2__c</fullName>
    <label>通勤方法2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommuteMethod</valueSetName>
    </valueSet>
</CustomField>