force-app/main/default/objects/Application__c/fields/CommuteMethodNote__c.field-meta.xml
<CustomField>
    <fullName>CommuteMethodNote__c</fullName>
    <label>通勤方法補足</label>
    <length>255</length>
    <type>Text</type>
</CustomField>