force-app/main/default/objects/Application__c/fields/CompanyIdText__c.field-meta.xml
<CustomField>
    <fullName>CompanyIdText__c</fullName>
    <externalId>true</externalId>
    <label>企業ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>