force-app/main/default/objects/Application__c/fields/CompanyUpperLimitRent__c.field-meta.xml
<CustomField>
    <fullName>CompanyUpperLimitRent__c</fullName>
    <label>会社上限家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>