force-app/main/default/objects/Application__c/fields/ContactEmail1__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail1__c</fullName>
    <label>メール</label>
    <type>Email</type>
</CustomField>