force-app/main/default/objects/Application__c/fields/ContactHomeFax__c.field-meta.xml
<CustomField>
    <fullName>ContactHomeFax__c</fullName>
    <label>連絡先FAX_自宅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>