force-app/main/default/objects/Application__c/fields/ContactMobile1__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile1__c</fullName>
    <label>携帯TEL</label>
    <type>Phone</type>
</CustomField>