force-app/main/default/objects/Application__c/fields/ContactMobile2__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile2__c</fullName>
    <label>連絡先携帯2</label>
    <type>Phone</type>
</CustomField>