force-app/main/default/objects/Application__c/fields/ContactPriorityEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactPriorityEmail__c</fullName>
    <label>連絡先優先順_メール</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>