force-app/main/default/objects/Application__c/fields/ContactPriorityHome__c.field-meta.xml
<CustomField>
    <fullName>ContactPriorityHome__c</fullName>
    <label>連絡先優先順_自宅</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>