force-app/main/default/objects/Application__c/fields/ContactPriorityMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactPriorityMobile__c</fullName>
    <label>連絡先優先順_携帯</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>