force-app/main/default/objects/Application__c/fields/ContractorChangeCategory2__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeCategory2__c</fullName>
    <label>対象物件2名義変更区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>法人</fullName>
            </value>
            <value>
                <fullName>個人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>