force-app/main/default/objects/Application__c/fields/CostWhenItOccursDealDefraymentNote__c.field-meta.xml
<CustomField>
    <fullName>CostWhenItOccursDealDefraymentNote__c</fullName>
    <label>費用発生時の当該手続きの取扱い負担補足</label>
    <type>TextArea</type>
</CustomField>