force-app/main/default/objects/Application__c/fields/CostWhenItOccursDealProcedure__c.field-meta.xml
<CustomField>
    <fullName>CostWhenItOccursDealProcedure__c</fullName>
    <label>費用発生時の当該手続きの取扱い手続き</label>
    <length>255</length>
    <type>Text</type>
</CustomField>