force-app/main/default/objects/Application__c/fields/CostWhenItOccursDealProcedureNote__c.field-meta.xml
<CustomField>
    <fullName>CostWhenItOccursDealProcedureNote__c</fullName>
    <label>費用発生時の当該手続きの取扱い手続き補足</label>
    <type>TextArea</type>
</CustomField>