force-app/main/default/objects/Application__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <label>作成日時</label>
    <length>255</length>
    <type>Text</type>
</CustomField>