force-app/main/default/objects/Application__c/fields/CreatedUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedUser__c</fullName>
    <label>作成者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>