force-app/main/default/objects/Application__c/fields/CurrentAdressZipCode__c.field-meta.xml
<CustomField>
    <fullName>CurrentAdressZipCode__c</fullName>
    <label>現住所郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>