force-app/main/default/objects/Application__c/fields/CurrentArea__c.field-meta.xml
<CustomField>
    <fullName>CurrentArea__c</fullName>
    <label>現所属エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>