force-app/main/default/objects/Application__c/fields/CurrentDepartmentName__c.field-meta.xml
<CustomField>
    <fullName>CurrentDepartmentName__c</fullName>
    <label>現所属部署名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>