force-app/main/default/objects/Application__c/fields/CurrentHouseDetails__c.field-meta.xml
<CustomField>
    <fullName>CurrentHouseDetails__c</fullName>
    <label>現住居内訳</label>
    <length>255</length>
    <type>Text</type>
</CustomField>