force-app/main/default/objects/Application__c/fields/CurrentHouseType__c.field-meta.xml
<CustomField>
    <fullName>CurrentHouseType__c</fullName>
    <label>現住居区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>社宅</fullName>
            </value>
            <value>
                <fullName>寮</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>