force-app/main/default/objects/Application__c/fields/CurrentRealEstate__c.field-meta.xml
<CustomField>
    <fullName>CurrentRealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>申請 (現物件名)</relationshipLabel>
    <relationshipName>RequestRealEstateRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>