force-app/main/default/objects/Application__c/fields/CurrentRealEstateFloor__c.field-meta.xml
<CustomField>
    <fullName>CurrentRealEstateFloor__c</fullName>
    <label>現物件階数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>