force-app/main/default/objects/Application__c/fields/CurrentRealEstateName__c.field-meta.xml
<CustomField>
    <fullName>CurrentRealEstateName__c</fullName>
    <label>現物件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>