force-app/main/default/objects/Application__c/fields/CurrentRelocationForm__c.field-meta.xml
<CustomField>
    <fullName>CurrentRelocationForm__c</fullName>
    <label>現赴任形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>単身赴任</fullName>
            </value>
            <value>
                <fullName>家族同伴</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>