force-app/main/default/objects/Application__c/fields/CurrentZipCode__c.field-meta.xml
<CustomField>
    <fullName>CurrentZipCode__c</fullName>
    <label>現所属郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>