force-app/main/default/objects/Application__c/fields/DailyRateRentDealNote__c.field-meta.xml
<CustomField>
    <fullName>DailyRateRentDealNote__c</fullName>
    <label>日割賃料の取扱い補足</label>
    <type>TextArea</type>
</CustomField>