force-app/main/default/objects/Application__c/fields/DeleteApplicationReson__c.field-meta.xml
<CustomField>
    <fullName>DeleteApplicationReson__c</fullName>
    <label>削除申請理由</label>
    <type>TextArea</type>
</CustomField>