force-app/main/default/objects/Application__c/fields/DesiredAgency__c.field-meta.xml
<CustomField>
    <fullName>DesiredAgency__c</fullName>
    <label>希望不動産会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>