force-app/main/default/objects/Application__c/fields/DesiredAreaCity__c.field-meta.xml
<CustomField>
    <fullName>DesiredAreaCity__c</fullName>
    <label>希望エリア_市町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>