force-app/main/default/objects/Application__c/fields/DesiredAreaFrom__c.field-meta.xml
<CustomField>
    <fullName>DesiredAreaFrom__c</fullName>
    <label>希望面積_FROM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>