force-app/main/default/objects/Application__c/fields/DesiredAreaTo__c.field-meta.xml
<CustomField>
    <fullName>DesiredAreaTo__c</fullName>
    <label>希望面積_TO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>