force-app/main/default/objects/Application__c/fields/DesiredCarModel1__c.field-meta.xml
<CustomField>
    <fullName>DesiredCarModel1__c</fullName>
    <label>希望車種1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>