force-app/main/default/objects/Application__c/fields/DesiredGarage__c.field-meta.xml
<CustomField>
    <fullName>DesiredGarage__c</fullName>
    <label>希望駐車場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>