force-app/main/default/objects/Application__c/fields/DesiredNumOfOwnCars__c.field-meta.xml
<CustomField>
    <fullName>DesiredNumOfOwnCars__c</fullName>
    <label>希望車台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>