force-app/main/default/objects/Application__c/fields/DesiredOther__c.field-meta.xml
<CustomField>
    <fullName>DesiredOther__c</fullName>
    <label>その他希望条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>