force-app/main/default/objects/Application__c/fields/DesiredPreviewDate1__c.field-meta.xml
<CustomField>
    <fullName>DesiredPreviewDate1__c</fullName>
    <label>下見希望日1</label>
    <type>Date</type>
</CustomField>