force-app/main/default/objects/Application__c/fields/DesiredPreviewDateAmPm__c.field-meta.xml
<CustomField>
    <fullName>DesiredPreviewDateAmPm__c</fullName>
    <label>下見希望日_午前午後</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>午前</fullName>
            </value>
            <value>
                <fullName>午後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>