force-app/main/default/objects/Application__c/fields/DesiredRailwayBoardingStation1__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayBoardingStation1__c</fullName>
    <label>希望沿線1乗車駅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>