force-app/main/default/objects/Application__c/fields/DesiredRailwayBoardingStation4__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayBoardingStation4__c</fullName>
    <label>希望沿線4乗車駅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>