force-app/main/default/objects/Application__c/fields/DesiredRailwayGetOffStation2__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayGetOffStation2__c</fullName>
    <label>希望沿線2降車駅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>