force-app/main/default/objects/Application__c/fields/DesiredRailwayGetOffStation3__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayGetOffStation3__c</fullName>
    <label>希望沿線3降車駅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>