force-app/main/default/objects/Application__c/fields/DesiredRailwayRoute1__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayRoute1__c</fullName>
    <label>希望沿線1路線</label>
    <length>255</length>
    <type>Text</type>
</CustomField>