force-app/main/default/objects/Application__c/fields/DesiredRailwayRoute3__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayRoute3__c</fullName>
    <label>希望沿線3路線</label>
    <length>255</length>
    <type>Text</type>
</CustomField>