force-app/main/default/objects/Application__c/fields/DesiredRailwayRoute4__c.field-meta.xml
<CustomField>
    <fullName>DesiredRailwayRoute4__c</fullName>
    <label>希望沿線4路線</label>
    <length>255</length>
    <type>Text</type>
</CustomField>