force-app/main/default/objects/Application__c/fields/DestinationGarageName__c.field-meta.xml
<CustomField>
    <fullName>DestinationGarageName__c</fullName>
    <label>相手先駐車場名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>