force-app/main/default/objects/Application__c/fields/EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCode__c</fullName>
    <label>社員コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>