force-app/main/default/objects/Application__c/fields/EmployeeComment__c.field-meta.xml
<CustomField>
    <fullName>EmployeeComment__c</fullName>
    <label>社員コメント</label>
    <type>TextArea</type>
</CustomField>