force-app/main/default/objects/Application__c/fields/EnrollmentDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDate__c</fullName>
    <label>入籍日</label>
    <type>Date</type>
</CustomField>