force-app/main/default/objects/Application__c/fields/EnteredByCode__c.field-meta.xml
<CustomField>
    <fullName>EnteredByCode__c</fullName>
    <label>入力者社員コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>