force-app/main/default/objects/Application__c/fields/ExpenseDepartment__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDepartment__c</fullName>
    <label>負担部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>