force-app/main/default/objects/Application__c/fields/FamilyComposition__c.field-meta.xml
<CustomField>
    <fullName>FamilyComposition__c</fullName>
    <label>家族構成</label>
    <length>255</length>
    <type>Text</type>
</CustomField>