force-app/main/default/objects/Application__c/fields/FamilySummaryScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>FamilySummaryScheduledDate__c</fullName>
    <label>家族引き纏め予定日</label>
    <type>Date</type>
</CustomField>