force-app/main/default/objects/Application__c/fields/FileButtonDelete__c.field-meta.xml
<CustomField>
    <fullName>FileButtonDelete__c</fullName>
    <label>ファイルボタン削除</label>
    <length>255</length>
    <type>Text</type>
</CustomField>