force-app/main/default/objects/Application__c/fields/FileButtonReference__c.field-meta.xml
<CustomField>
    <fullName>FileButtonReference__c</fullName>
    <label>ファイルボタン参照</label>
    <length>255</length>
    <type>Text</type>
</CustomField>