force-app/main/default/objects/Application__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <externalId>true</externalId>
    <label>ファイルID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>