force-app/main/default/objects/Application__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>ファイル名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>