force-app/main/default/objects/Application__c/fields/FloorPlan10__c.field-meta.xml
<CustomField>
    <fullName>FloorPlan10__c</fullName>
    <label>間取10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LayoutType</valueSetName>
    </valueSet>
</CustomField>