force-app/main/default/objects/Application__c/fields/GarageAdressNewContract__c.field-meta.xml
<CustomField>
    <fullName>GarageAdressNewContract__c</fullName>
    <label>駐車場住所_新規契約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>