force-app/main/default/objects/Application__c/fields/GarageApplicationType__c.field-meta.xml
<CustomField>
    <fullName>GarageApplicationType__c</fullName>
    <label>駐車場申請区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>利用申請</fullName>
            </value>
            <value>
                <fullName>利用停止申請</fullName>
            </value>
            <value>
                <fullName>借換申請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>