force-app/main/default/objects/Application__c/fields/GarageCarColor__c.field-meta.xml
<CustomField>
    <fullName>GarageCarColor__c</fullName>
    <label>駐車場車色</label>
    <length>255</length>
    <type>Text</type>
</CustomField>