force-app/main/default/objects/Application__c/fields/GarageCarModel__c.field-meta.xml
<CustomField>
    <fullName>GarageCarModel__c</fullName>
    <label>駐車場車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>