force-app/main/default/objects/Application__c/fields/GarageFax__c.field-meta.xml
<CustomField>
    <fullName>GarageFax__c</fullName>
    <label>相手先駐車場FAX番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>