force-app/main/default/objects/Application__c/fields/GarageName__c.field-meta.xml
<CustomField>
    <fullName>GarageName__c</fullName>
    <label>駐車場名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>