force-app/main/default/objects/Application__c/fields/GarageSectionNewContract__c.field-meta.xml
<CustomField>
    <fullName>GarageSectionNewContract__c</fullName>
    <label>駐車場区画番号_新規契約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>