force-app/main/default/objects/Application__c/fields/GarageUseStartDate__c.field-meta.xml
<CustomField>
    <fullName>GarageUseStartDate__c</fullName>
    <label>駐車場使用開始日</label>
    <type>Date</type>
</CustomField>