force-app/main/default/objects/Application__c/fields/HasOtherCar__c.field-meta.xml
<CustomField>
    <fullName>HasOtherCar__c</fullName>
    <label>その他車有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>