force-app/main/default/objects/Application__c/fields/HomeAdress1__c.field-meta.xml
<CustomField>
    <fullName>HomeAdress1__c</fullName>
    <label>自家住所1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>