force-app/main/default/objects/Application__c/fields/HomeAdress2__c.field-meta.xml
<CustomField>
    <fullName>HomeAdress2__c</fullName>
    <label>自家住所2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>