force-app/main/default/objects/Application__c/fields/HomeCommuteTime__c.field-meta.xml
<CustomField>
    <fullName>HomeCommuteTime__c</fullName>
    <label>自家通勤時間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>