force-app/main/default/objects/Application__c/fields/HomeManagementStatus__c.field-meta.xml
<CustomField>
    <fullName>HomeManagementStatus__c</fullName>
    <label>自家管理状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>引き払い済み</fullName>
            </value>
            <value>
                <fullName>家族入居中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>