force-app/main/default/objects/Application__c/fields/HousePlanedArea__c.field-meta.xml
<CustomField>
    <fullName>HousePlanedArea__c</fullName>
    <label>住居予定エリア</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>北海道</fullName>
            </value>
            <value>
                <fullName>東北</fullName>
            </value>
            <value>
                <fullName>関東</fullName>
            </value>
            <value>
                <fullName>中部</fullName>
            </value>
            <value>
                <fullName>近畿</fullName>
            </value>
            <value>
                <fullName>中国・四国</fullName>
            </value>
            <value>
                <fullName>九州</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>