force-app/main/default/objects/Application__c/fields/HousePlanedCity__c.field-meta.xml
<CustomField>
    <fullName>HousePlanedCity__c</fullName>
    <label>住居予定市町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>