force-app/main/default/objects/Application__c/fields/HrMasterEmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>HrMasterEmployeeCode__c</fullName>
    <label>人事マスタ社員コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>