force-app/main/default/objects/Application__c/fields/InaugurationDate__c.field-meta.xml
<CustomField>
    <fullName>InaugurationDate__c</fullName>
    <label>着任日</label>
    <type>Date</type>
</CustomField>