force-app/main/default/objects/Application__c/fields/IsBoxed__c.field-meta.xml
<CustomField>
    <fullName>IsBoxed__c</fullName>
    <label>箱詰有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>