force-app/main/default/objects/Application__c/fields/IsCancel__c.field-meta.xml
<CustomField>
    <fullName>IsCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>申請キャンセル</label>
    <type>Checkbox</type>
</CustomField>